# backend-pre-task

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile.django  README.md  docker-compose.local.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: pull_request_template.md
.github/workflows/: run-lint-and-test.yml
backend/: .coveragerc  .flake8  pytest.ini
backend/api/v1/: urls.py
backend/api/v1/contact/: serializers.py  urls.py  views.py
backend/apps/contact/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/contact/fixtures/: contact.json  contactaddress.json  contactemail.json  contactimportantdate.json  contactphonenumber.json  contactwebsite.json  label.json  user.json
backend/apps/contact/migrations/: 0001_initial.py  0002_contact_user.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/conf/: asgi.py  settings.py  urls.py  wsgi.py
backend/conf/settings/: base.py  local.py  prod.py  test.py
backend/tests/: test_healhcheck.py
db/: data.sql  schema.sql
docs/: project_init.md
scripts/: entrypoint.django.sh
