[tool.poetry]
name = "backend-pre-task"
version = "0.1.0"
description = ""
authors = ["jslee <dlwhdtjd098@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"
djangorestframework = ">=3.14,<4.0"
django-mysql = "^4.14.0"
drf-spectacular = "^0.27.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
ruff = "^0.5.6"
pyright = "^1.1.374"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
